# litaudioio

./: Cargo.toml  README.md
examples/: remux.rs
src/: error.rs  input.rs  lib.rs  output.rs  reader.rs  writer.rs
src/ffmpeg/: converter.rs  format_context.rs  mod.rs  stream.rs
src/ffmpeg/codec/: codec.rs  codec_context.rs  codec_params.rs  decoder.rs  encoder.rs  mod.rs
src/ffmpeg/containers/: frame.rs  mod.rs  packet.rs
src/ffmpeg/format/: audio_format.rs  channel_layout.rs  mod.rs  picking.rs  sample_format.rs
src/ffmpeg/utils/: error.rs  mod.rs  unix_errors.rs  wrapping.rs
tests/: remux.rs
