[package]
name = "litaudioio"
version = "0.1.0"
authors = ["Egor Dmitriev <egordmitriev2@gmail.com>"]
edition = "2018"

[dependencies]
litcontainers = {path = "../litcontainers/litcontainers"}
litaudio = {path = "../litaudio"}
ffmpeg-sys = {git = "https://github.com/meh/rust-ffmpeg-sys.git"}
c_fixed_string = "0.2.0"
libc = "0.2.55"
bitflags = "1.0.4"
derive-new = "0.5.6"